Prevents block items from "jumping" to the left when selected

--- a/shipBuilder/css/style.css
+++ b/shipBuilder/css/style.css
@@ -285,6 +285,9 @@ li.block-item__selected {
     border-left-width: 6px;
     border-left-style: solid;
 }
+li.block-item__selected .block-info-wrapper {
+    padding-left: 4px;
+}
 
 .add-block {
     background-color: hsl(222, 53%, 98%);
